--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Chat Application",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon backend/server.js",
+    "start": "node backend/server.js",
     "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "Satya Prakash Swain",
