--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "proxy": "http://127.0.0.1:5000",
   "scripts": {
-    "dev": "vite --openssl-legacy-provider",
-    "build": "vite --openssl-legacy-provider build",
+    "dev": "vite",
+    "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
